--- a/css/style.css
+++ b/css/style.css
@@ -318,3 +318,101 @@ body {
 .magic__text p {
     margin-bottom: 25px;
 }
+
+.portfolio {
+    padding: 140px 0 165px;
+}
+
+.portfolio__top {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-end;
+    margin-bottom: 100px;
+}
+
+.portfolio__content {
+    column-count: 4;
+    column-gap: 23px;
+    padding-bottom: 72px;
+}
+
+.portfolio__item {
+    margin-bottom: 22px;
+}
+
+.portfolio__item img {
+    width: 100%;
+}
+
+.portfolio_add {
+    display: block;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: bold;
+    font-size: 14px;
+    line-height: 17px;
+    letter-spacing: 1.2px;
+    color: #242121;
+    text-align: center;
+    text-transform: uppercase;
+    padding: 42px 15px 41px;
+    background-color: #f6f8fa;
+    margin-bottom: 130px;
+}
+
+.blockquote {
+
+    max-width: 650px;
+    margin: 0 auto 148px;
+    text-align: center;
+    font-family: 'Merriweather', serif;
+    font-style: italic;
+    font-weight: 300;
+    font-size: 18px;
+    line-height: 36px;
+    color: #242121;
+
+}
+
+.blockquote__author {
+    padding-top: 51px;
+    display: block;
+    color: #9e9e9e;
+    font-size: 14px;
+    line-height: 32px;
+}
+
+.portfolio__video {
+    background-image: url("../images/video-bg.jpg");
+    height: 324px;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 165px;
+}
+
+.portfolio__numbers {
+    display: flex;
+    justify-content: space-around;
+}
+
+.portfolio__numbers-item {
+    text-align: center;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 60px;
+    font-weight: bold;
+    line-height: 73px;
+    color: #242121;
+    margin-bottom: 9px;
+}
+
+.portfolio__numbers-item span {
+    font-family: 'Open Sans', sans-serif;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 19px;
+    color: #333333;
+    display: block;
+}
