--- a/css/style.css
+++ b/css/style.css
@@ -537,3 +537,36 @@ left: -95px;
 .slick-next{
 right: -95px;
 }
+
+.team{
+    padding: 120px 0 130px;
+
+}
+
+.team__title{
+    margin-bottom: 100px;
+}
+
+.team__items{
+    display: flex;
+    justify-content: space-between;
+    text-align: center;
+}
+
+.team__name{
+    font-family: 'Montserrat', sans-serif;
+    padding: 35px 0 12px;
+    font-weight: bold;
+    font-size: 14px;
+    line-height: 17px;
+    color: #333;
+
+}
+
+.team__position{
+    
+    font-weight: 300;
+    font-size: 12px;
+    line-height: 16px;
+    color: #373A39
+}
