--- a/css/style.css
+++ b/css/style.css
@@ -474,7 +474,7 @@ body {
 
 }
 
-.slider-blog__item{
+.slider-blog__item {
     padding: 190px 0;
 }
 
@@ -519,8 +519,8 @@ body {
     transform: translateY(-2px);
 }
 
-.slick-prev, 
-.slick-next{
+.slick-prev,
+.slick-next {
     border: none;
     background-color: transparent;
     padding: 0;
@@ -530,30 +530,30 @@ body {
     transform: translateY(-165%);
 }
 
-.slick-prev{
-left: -95px;
+.slick-prev {
+    left: -95px;
 }
 
-.slick-next{
-right: -95px;
+.slick-next {
+    right: -95px;
 }
 
-.team{
+.team {
     padding: 120px 0 130px;
 
 }
 
-.team__title{
+.team__title {
     margin-bottom: 100px;
 }
 
-.team__items{
+.team__items {
     display: flex;
     justify-content: space-between;
     text-align: center;
 }
 
-.team__name{
+.team__name {
     font-family: 'Montserrat', sans-serif;
     padding: 35px 0 12px;
     font-weight: bold;
@@ -563,10 +563,72 @@ right: -95px;
 
 }
 
-.team__position{
-    
+.team__position {
     font-weight: 300;
     font-size: 12px;
     line-height: 16px;
     color: #373A39
+}
+
+.pricing {
+    background-color: #f6f8fa;
+    padding: 145px 0 160px;
+
+}
+
+.pricing__title {
+    margin-bottom: 90px;
+}
+
+.pricing__items {
+    display: flex;
+    justify-content: space-between;
+}
+
+ul.pricing__item {
+    background-color: #fff;
+    text-align: center;
+    padding: 24px 0px 25px;
+    width: 370px;
+}
+
+
+
+.pricing__item li {
+   font-weight: 300;
+   font-size: 16px;
+   line-height: 22px;
+   color: #242121;
+   margin-bottom: 30px; 
+}
+
+.pricing__item .pricing__item-name{
+    text-align: left;
+    font-weight: bold;
+    margin-left: 20px;
+}
+
+.pricing__item .pricing__item-num{
+    font-size: 80px;
+    line-height: 109px;
+    margin-bottom: 50px;
+}
+
+.pricing__item-num sup{
+    font-size: 40px;
+    line-height: 54px;
+
+}
+
+.pricing__item-link{
+margin-top: 70px;
+display: block;
+font-family: 'Montserrat', sans-serif;
+font-style: normal;
+font-weight: bold;
+font-size: 14px;
+line-height: 17px;
+letter-spacing: 1.2px;
+color: #242121;
+
 }
